another commit with updates

--- a/index.html
+++ b/index.html
@@ -10,20 +10,64 @@
 </head>
 <body>
     <header>
-        <h1 id="main-title">
-            Welcome to my 'about me' page!
-        </h1>
+        <nav>
+            <link rel="stylesheet" href="">
+        </nav>
     <header/>
     <main>
-        <p class="para-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dignissimos labore quam vitae architecto corporis et placeat, officiis accusamus nulla qui corrupti unde iusto temporibus, tempora distinctio eius maxime omnis!
-        </p>
-        <p class="para-2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt in, temporibus impedit voluptate assumenda, similique explicabo veniam, commodi dolorum pariatur praesentium itaque laborum asperiores placeat facere! Officiis voluptates tempore quasi.
-        </p>
-        <p class="para-3">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, accusamus ipsa animi labore, nulla esse molestiae aliquam qui id, veritatis nobis ratione iusto consequatur. Exercitationem nam enim officia aliquam.
-        </p>
+        <h1>
+            Welcome to my 'about me' page!
+        </h1>
+        <section>
+            <h2>
+                Biography
+            </h2>
+            <p class="para-1">
+                Sam Kemp was born in 1994 and grew up in Beccles, Suffolk. A creative at heart - Sam started studying media and photography in college; and then went on to study a BA Hons in Creative Media Practice at Bath Spa University - with a focus on camera operating and post-production.
+            </p>
+        </section>
+        <section>
+            <h2>
+                Education
+            </h2>
+            <ul>
+                BA Hons Creative Media Practice
+            </ul>
+            <ul>
+                Media Deploma and Photography A-level
+            </ul>
+            <ul>
+                12 GCSE's at Grade A-C
+            </ul>
+        </section>
+        <section>
+            <h2>
+                Work experience
+            </h2>
+            <ul>
+                Video Production Manager - 2 years at BizClik Media
+            </ul>
+            <ul>
+                Video Editor - 1 year at Digital Voices
+            </ul>
+            <ul>
+                Freelance filmmaker - 10 years
+            </ul>
+            <ul>
+                Camera operator - 3 years at Artswork Media
+            </ul>
+        </section>
+        <section>
+            <h2>
+                Future goals
+            </h2>
+            <p class="para-2">
+               Sam is currently studying a Full Stack Coding Botcamp with the hopes of eventually becoming a developer in the local area of Norwich, Norfolk.
+            </p>
+        </section>
+        <footer>
+            &#169; of Sam Kemp
+        </footer>
     </main>
     <link rel="stylesheet" href="app.js">
 </body>
