commiting changes to JS with 6 questions for the user. Need to add 7th question and a score

--- a/index.html
+++ b/index.html
@@ -31,13 +31,9 @@
                 Education
             </h2>
             <ul>
-                BA Hons Creative Media Practice
-            </ul>
-            <ul>
-                Media Deploma and Photography A-level
-            </ul>
-            <ul>
-                12 GCSE's at Grade A-C
+                <li>BA Hons Creative Media Practice</li>
+                <li>Media Deploma and Photography A-level</li>
+                <li> 12 GCSE's at Grade A-C</li>
             </ul>
         </section>
         <section>
@@ -45,16 +41,10 @@
                 Work experience
             </h2>
             <ul>
-                Video Production Manager - 2 years at BizClik Media
-            </ul>
-            <ul>
-                Video Editor - 1 year at Digital Voices
-            </ul>
-            <ul>
-                Freelance filmmaker - 10 years
-            </ul>
-            <ul>
-                Camera operator - 3 years at Artswork Media
+                <li>Video Production Manager - 2 years at BizClik Media</li>
+                <li>Video Editor - 1 year at Digital Voices</li>
+                <li>Freelance filmmaker - 10 years</li>
+                <li>Camera operator - 3 years at Artswork Media</li>
             </ul>
         </section>
         <section>
@@ -65,10 +55,27 @@
                Sam is currently studying a Full Stack Coding Botcamp with the hopes of eventually becoming a developer in the local area of Norwich, Norfolk.
             </p>
         </section>
+        <section>
+            <h2>
+                My top 10 places to eat in Norwich
+            </h2>
+            <ol>
+                <li>Benedicts</li>
+                <li>Haggle</li>
+                <li>Trattoria Rustica</li>
+                <li>Shiki</li>
+                <li>Kimchi</li>
+                <li>Dhaba at Fifteen</li>
+                <li>Namaste Village</li>
+                <li>The Belgian Monk</li>
+                <li>Roger Hickman's</li>
+                <li>Don Txoko</li>
+            </ol>
+        </section>
         <footer>
             &#169; of Sam Kemp
         </footer>
     </main>
-    <link rel="stylesheet" href="app.js">
+    <script src="app.js"></script>
 </body>
 </html>
