--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
             &#169; of Sam Kemp
         </footer>
     </main>
-    <script src="app.js"></script>
+    <!--script src="app.js"></script-->
 </body>
 </html>
